--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>New York City</title>
+    <title>New York City history</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="image1">
         <div class="ptext">
             <span class="border">
-                New York City History
+                New York City
             </span>
         </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="image1">
         <div class="ptext">
             <span class="border">
-                Krunal Patel &copy; 2019
+                Krunal &copy; 2019
             </span>
         </div>
     </div>
